# CS354R-Project3

./: .gitignore  Assignment2.cpp  Assignment2.h  Assignment3.cpp  Assignment3.h  Ball.cpp  Ball.h  BaseApplication.cpp  Box.cpp  Box.h  Client.h  ClientToServer.h  ContactSensorCallback.h  GUI.cpp  GUI.h  GameObject.cpp  GameObject.h  Heli.cpp  Heli.h  HeliChass.cpp  HeliChass.h  HeliProp.cpp  HeliProp.h  Makefile.am  OgreMotionState.cpp  OgreMotionState.h  PROJECT_DESCRIPTION.txt  PlayingField.cpp  PlayingField.h  README.md  README.txt  Server.cpp  Server.h  ServerToClient.h  Simulator.cpp  Simulator.h  SoundSystem.cpp  SoundSystem.h  Surface.cpp  Surface.h  (+8 more)
chat/: chat.cpp  client.h  compile_chat  runchat  server.h  settings.h
